# serveradmin-apiserver

./: .gitignore  Cargo.toml  LICENSE  README.md  example.kubeconfig  server-cert.pem  server-key.pem
resources/: attributes.csv  servertype_attributes.csv  servertypes.csv
src/: main.rs
src/api/: kube_common.rs  mod.rs  serveradmin_common.rs  servertypes.rs
src/controller/: kube_apis.rs  mod.rs  openapi.rs
src/request/: accept_extractor.rs  authorization_extractor.rs  mod.rs
src/service/: kube_converter.rs  mod.rs  serveradmin_converter.rs  serveradmin_data_api.rs
