[package]
name = "serveradmin-apiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
adminapi = { path = "../../innogames/serveradmin/rust" }
env_logger = "0.11"
log = "0.4"
axum = { version = "0.7", features = ["macros"] }
axum-macros = { version = "0.3.0-rc.3" }
csv = "1.3"
convert_case = "0.6"
serde-inline-default = "0.2"
utoipa = "5.2"
clap = "4.5"
