[package]
name = "serveradmin-apiserver"
description = "A Kubernetes compatible API server for InnoGames' Serveradmin tool"
version = "0.1.0"
edition = "2021"
authors = ["Yannik_Sc <yannik@yannik-sc.de>"]
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
adminapi = { git = "https://github.com/YannikSc/serveradmin.git" }
env_logger = "0.11"
log = "0.4"
axum = { version = "0.7", features = ["macros"] }
axum-macros = { version = "0.3.0-rc.3" }
csv = "1.3"
convert_case = "0.6"
serde-inline-default = "0.2"
utoipa = "5.2"
clap = "4.5"
serde_yml = "0.0.12"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"

[features]
# Allows storing metadata.labels and metadata.annotations in serveradmin attributes
advanced_metadata_storage = []
